my-deployments-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment-back
  labels:
    app: main-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-back
  template:
    metadata:
      labels:
        app: main-back
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        # ports:
        # - containerPort: 8085
