my-service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mt-svc-back
spec:
  ports:
  - name: mt-svc
    protocol: TCP
    port: 9002
    targetPort: 8080
  selector:
    app: main-back 
  type: NodePort
