my-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mt-svc
spec:
  ports:
  - name: nginx-svc
    protocol: TCP
    port: 9001
    targetPort: 80
    nodePort: 30080
  - name: mt-svc
    protocol: TCP
    port: 9002
    targetPort: 8080
  selector:
    app: main 
  type: NodePort
